# EmbedPython

./: CMakeLists.txt  setup.sh
scripts/: test.py
src/: main.cpp  spammodule.c  vector.h
